@@ -58,6 +58,28 @@ pl (1)
     assert_equal '', @ui.error
   end
 
+  def test_execute_all_prerelease
+    a1_name = @a1.full_name
+    a2_name = @a2.full_name
+
+    @cmd.handle_options %w[-r --all --prerelease]
+
+    use_ui @ui do
+      @cmd.execute
+    end
+
+    expected = <<-EOF
+
+*** REMOTE GEMS ***
+
+a (3.a, 2, 1)
+pl (1)
+    EOF
+
+    assert_equal expected, @ui.output
+    assert_equal '', @ui.error
+  end
+
   def test_execute_details
     @a2.summary = 'This is a lot of text. ' * 4
     @a2.authors = ['Abraham Lincoln', 'Hirohito']
